--- a/index.html
+++ b/index.html
@@ -187,8 +187,8 @@
                     </div>
                     <div class="texts">
                         <h3>PASSAGE OF WATER</h3>
-                        <div class="by">by Yiyung Kang</div>
-                        <div class="para">In collaboration with artist Yiyun Kang and NASA, learn about freshwater availability and engage...</div>
+                        <div class="by">by By Simon Doury, Artist In Residence at Google Arts & Culture Lab</div>
+                        <div class="para"> Generate, play and compose music inspired by instruments across the globe with the help of Google AI </div>
                     </div>
                 </div>
                 <div class="box" id="b3">
@@ -199,8 +199,8 @@
                     </div>
                     <div class="texts">
                         <h3>PASSAGE OF WATER</h3>
-                        <div class="by">by Yiyung Kang</div>
-                        <div class="para">In collaboration with artist Yiyun Kang and NASA, learn about freshwater availability and engage...</div>
+                        <div class="by">by  By Gael Hugo, Artist In Residence at Google Arts & Culture Lab </div>
+                        <div class="para"> Explore, learn & test your cultural knowledge with the help of Google AI. </div>
                     </div>
                 </div>
                 <div class="box" id="b4">
@@ -211,8 +211,8 @@
                     </div>
                     <div class="texts">
                         <h3>PASSAGE OF WATER</h3>
-                        <div class="by">by Yiyung Kang</div>
-                        <div class="para">In collaboration with artist Yiyun Kang and NASA, learn about freshwater availability and engage...</div>
+                        <div class="by">by  By Jack Wild, Artist In Residence at Google Arts & Culture Lab </div>
+                        <div class="para">Learn the art of image prompting with the help of Google AI. </div>
                     </div>
                 </div>
                 <div class="box" id="b5">
@@ -223,8 +223,8 @@
                     </div>
                     <div class="texts">
                         <h3>PASSAGE OF WATER</h3>
-                        <div class="by">by Yiyung Kang</div>
-                        <div class="para">In collaboration with artist Yiyun Kang and NASA, learn about freshwater availability and engage...</div>
+                        <div class="by">by  Jack Wild, Artist in Residence at Google Arts & Culture Lab </div>
+                        <div class="para"> How far can you fall through the gallery without touching the artworks? </div>
                     </div>
                 </div>
             </div>
